--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "REST API for todo app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Haris Ejaz",
   "license": "ISC",
